--- a/contrib/other-builds/manual-label/Makefile
+++ b/contrib/other-builds/manual-label/Makefile
@@ -6,8 +6,8 @@ clean:
 .cpp.o:
 	g++ -I../../../ -O6 -g -c $<
 
-manual-label: DeEn.o manual-label.o
+manual-label: DeEn.o manual-label.o EnPhrasalVerb.o
 
-	g++ DeEn.o manual-label.o -lz -lboost_program_options-mt -o manual-label
+	g++ EnPhrasalVerb.o DeEn.o manual-label.o -lz -lboost_program_options-mt -o manual-label
 
 
