--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1302,16 +1302,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/StatelessFeatureFunction.h</locationURI>
 		</link>
 		<link>
-			<name>FF/SyntaxConstraintFeature.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/SyntaxConstraintFeature.cpp</locationURI>
-		</link>
-		<link>
-			<name>FF/SyntaxConstraintFeature.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/SyntaxConstraintFeature.h</locationURI>
-		</link>
-		<link>
 			<name>FF/TargetBigramFeature.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/TargetBigramFeature.cpp</locationURI>
@@ -1340,6 +1330,16 @@
 			<name>FF/TargetWordInsertionFeature.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/TargetWordInsertionFeature.h</locationURI>
+		</link>
+		<link>
+			<name>FF/TreeStructureFeature.cpp</name>
+			<type>1</type>
+			<location>/home/hieu/workspace/github/mosesdecoder/moses/FF/TreeStructureFeature.cpp</location>
+		</link>
+		<link>
+			<name>FF/TreeStructureFeature.h</name>
+			<type>1</type>
+			<location>/home/hieu/workspace/github/mosesdecoder/moses/FF/TreeStructureFeature.h</location>
 		</link>
 		<link>
 			<name>FF/UnknownWordPenaltyProducer.cpp</name>
